# agent-identity

./: .env.example  .gitignore  LICENSE  README.md  deploy.py  local_run.py  permission.sh  pyproject.toml  register_gemini_enterprise.py  remote_test.py  run.sh  temp_broken.ipynb
.agents/skills/agent-identity/: SKILL.md
.agents/skills/agent-identity/agents/: openai.yaml
notebooks/: Agent_Identity_Experiment.ipynb  agentid_wif_walkt.ipynb  policy_agent_post_work_logging.ipynb  policy_agent_walkthrough.ipynb
policy_agent/: agent.py  config.py  gcs_tools.py
sample_policies/: acceptable-use.md  data-retention.md  remote-work.md
